# timeboxd

./: README.md  RELEASING.md  conductor.json  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/features/: idle-auto-stop.md  overtime-notification.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  database_tests.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: idle.rs  integration.rs  linear.rs  mod.rs  session.rs  settings.rs  sound.rs  timebox.rs
src-tauri/src/models/: integration.rs  linear_project.rs  mod.rs  session.rs  timebox.rs  timebox_change_log.rs
src/components/: ActiveTimeboxes.tsx  CopyButton.tsx  IdleReturnBanner.tsx  IssueCard.tsx  LeftNav.tsx  LinearConnectionForm.tsx  LinearProjectPicker.tsx  LinearTeamPicker.tsx  ProjectIssuesView.tsx  SortableTimeboxCard.tsx  TimeboxCard.tsx  TimeboxForm.tsx  TimeboxList.tsx  Timer.tsx  TodoistConnectionForm.tsx  UpdateChecker.tsx
src/components/MarkdownEditor/: MarkdownEditor.css  MarkdownEditor.tsx
src/components/MarkdownEditor/utils/: markdownSerializer.ts
src/contexts/: AppContext.tsx
src/hooks/: useIdleDetection.ts  useLinearIssueCreation.ts  useOvertimeNotification.ts  useProjectSearch.ts  useTeamSearch.ts  useTimers.ts
src/lib/: beep.ts  commands.ts  types.ts  utils.ts
src/pages/: IntegrationsPage.tsx  LinearPage.tsx  SessionsPage.tsx
